--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
+  <meta content="Contact Sourav Banik" name="Sourav Banik">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Contact Me</title>  
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -39,11 +39,9 @@
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : Home</a></li>
           <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
+          <li><a href="./about.html" title="">03 : About Me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./components.html" title="">05 : Components</a></li>
         </ul>
-
 
       </div> 
     </div>
@@ -55,22 +53,25 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">03 : Contact me</h1>
+            <h1 class="h2">04: Contact me</h1>
           </div>
           
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
-               <form action="" class="reveal-content">
+               <form action="https://www.souravbanik.com//contact/from_github" class="reveal-content">
                   <div class="row">
                     <div class="col-md-7">
                       <div class="form-group">
-                        <input type="email" class="form-control" id="email" placeholder="Email">
+                        <input type="text" name="name" class="form-control" id="name" placeholder="Name" required>
                       </div>
                       <div class="form-group">
-                        <input type="text" class="form-control" id="subject" placeholder="Subject">
+                        <input type="email" name="email" class="form-control" id="email" placeholder="Email" required>
                       </div>
                       <div class="form-group">
-                        <textarea class="form-control" rows="5" placeholder="Enter your message"></textarea>
+                        <input type="text" name="subject" class="form-control" id="subject" placeholder="Subject">
+                      </div>
+                      <div class="form-group">
+                        <textarea name="message" id="message" class="form-control" rows="5" placeholder="Enter your message"></textarea>
                       </div>
                       <button type="submit" class="btn btn-default btn-lg">Send</button>
                     </div>
@@ -80,29 +81,29 @@
                           <span class="fa-icon">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                           </span>
-                          + 33 9 07 45 12 65
+                          +88 01990477061
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          e-mail@mail.io
+                          mail@souravbanik.com
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
-                          42 rue Moulbert 75016 Paris
+                          Dhaka, Bangladesh
                         </li>
                       </ul>
                       <h3>Follow me on social networks</h3>
-                      <a href="http://www.facebook.com" title="" class="fa-icon">
+                      <a href="https://www.facebook.com/sourav.banik.5682944/" title="" class="fa-icon">
                         <i class="fa fa-facebook"></i>
                       </a>
-                      <a href="http://www.twitter.com" title="" class="fa-icon">
+                      <a href="#" title="" class="fa-icon">
                         <i class="fa fa-twitter"></i>
                       </a>
-                      <a href="http://www.linkedin.com" title="" class="fa-icon">
+                      <a href="https://www.linkedin.com/in/sourav-banik-528312180/" title="" class="fa-icon">
                         <i class="fa fa-linkedin"></i>
                       </a>
 
@@ -123,7 +124,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <p>Copyright&nbsp;&copy;&nbsp;<script>document.write(new Date().getFullYear());</script> Sourav Banik, Bangladesh. All rights reserved.</p>
       </div>
     </div>
   </div>
@@ -135,19 +136,6 @@
   });
 </script>
 
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
-
-<script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-XXXXX-X', 'auto');
-  ga('send', 'pageview');
-</script>
-
---> <script type="text/javascript" src="./main.70a66962.js"></script></body>
+<script type="text/javascript" src="./main.70a66962.js"></script></body>
 
 </html>
