--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
+  <meta content="This is a portfolio showcase for Sourav Banik." name="Sourav Banik">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Home</title>  
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -39,11 +39,9 @@
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : Home</a></li>
           <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
+          <li><a href="./about.html" title="">03 : About Me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./components.html" title="">05 : Components</a></li>
         </ul>
-
 
       </div> 
     </div>
@@ -58,9 +56,9 @@
             <div class="text-content">
               <h1>Hello,<br>
                 <span id="typed-strings">
-                  <span>I'm James Dean</span>
-                  <span>French Designer</span>
-                  <span>Working as a Freelance</span>
+                  <span>I'm Sourav Banik</span>
+                  <span>Coding Enthusiast</span>
+                  <span>Motivated Problem Solver</span>
                 </span>
                 <span id="typed"></span>
               </h1>
