second_production_commit

--- a/django.html
+++ b/django.html
@@ -60,12 +60,12 @@
         </ul>
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./addin.html" title="" class="active">001</a></li>
+            <li><a href="./addin.html" title="">001</a></li>
             <li><a href="./technical.html" title="">002</a></li>
             <li><a href="./website.html" title="">003</a></li>
             <li><a href="./financial.html" title="">004</a></li>
             <li><a href="./crossapp.html" title="">005</a></li>
-            <li><a href="./django.html" title="">006</a></li>
+            <li><a href="./django.html" title="" class="active">006</a></li>
           </ul>
 
 
