--- a/technical.html
+++ b/technical.html
@@ -60,8 +60,8 @@
         </ul>
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./addin.html" title="" class="active">001</a></li>
-            <li><a href="./technical.html" title="">002</a></li>
+            <li><a href="./addin.html" title="">001</a></li>
+            <li><a href="./technical.html" title="" class="active">002</a></li>
             <li><a href="./website.html" title="">003</a></li>
             <li><a href="./financial.html" title="">004</a></li>
             <li><a href="./crossapp.html" title="">005</a></li>
