third_production_commit

--- a/financial.html
+++ b/financial.html
@@ -31,7 +31,7 @@
   <meta name="msapplication-TileImage" content="./assets/icons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Personal Website</title>  
+  <title>Dashboard Application</title>  
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -53,7 +53,7 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
+          <li><a href="/" title="">01 : Home</a></li>
           <li><a href="./works.html" title="">02 : Works</a></li>
           <li><a href="./about.html" title="">03 : About Me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
@@ -82,7 +82,7 @@
           <div class="text-center">
             <h1 class="h2">004 : Bootstrap Dashboard Application</h1>
           </div>
-          <p>This application developed to using bootstrap dashboard template with blended API in the frontend. The Application features user management, powerful data visualization tools like highcharts, datatables.net etc. , data storing and processing tools.</p>
+          <p>This application developed to using bootstrap dashboard template with blended API in the frontend. The Application features user management, powerful data visualization tools like highcharts, datatables.net etc., data storing and processing tools.</p>
 
           <blockquote>
             <p>"If we have data, let’s look at data. If all we have are opinions, let’s go with mine."</p>
