--- a/addin.html
+++ b/addin.html
@@ -53,7 +53,7 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
+          <li><a href="/" title="">01 : Home</a></li>
           <li><a href="./works.html" title="">02 : Works</a></li>
           <li><a href="./about.html" title="">03 : About Me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
@@ -67,7 +67,6 @@
             <li><a href="./crossapp.html" title="">005</a></li>
             <li><a href="./django.html" title="">006</a></li>
           </ul>
-
 
       </div> 
     </div>
