--- a/website.html
+++ b/website.html
@@ -53,7 +53,7 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
+          <li><a href="/" title="">01 : Home</a></li>
           <li><a href="./works.html" title="">02 : Works</a></li>
           <li><a href="./about.html" title="">03 : About Me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
@@ -97,7 +97,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-6">
             <img src="./assets/images/website-01.jpg" class="img-responsive" alt="">
-            <p>Live Contact</p>
+            <p>Live Contact Widget</p>
           </div>
           <div class="col-xs-12 col-md-6">
             <img src="./assets/images/website-02.jpg" class="img-responsive" alt="">
