--- a/works.html
+++ b/works.html
@@ -30,7 +30,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="./assets/icons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  
+
   <title>Works</title>  
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
@@ -53,7 +53,7 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
+          <li><a href="/" title="">01 : Home</a></li>
           <li><a href="./works.html" title="">02 : Works</a></li>
           <li><a href="./about.html" title="">03 : About Me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
